# co_usb

./: .clang-format  .gitignore  00-simple-echo_8cpp.html  00-simple-echo_8cpp__incl.map  00-simple-echo_8cpp__incl.md5  01-multiple-transfers_8cpp.html  01-multiple-transfers_8cpp__incl.map  01-multiple-transfers_8cpp__incl.md5  02-hotplug_8cpp.html  02-hotplug_8cpp__incl.map  02-hotplug_8cpp__incl.md5  03-raw-hotplug_8cpp.html  03-raw-hotplug_8cpp__incl.map  03-raw-hotplug_8cpp__incl.md5  04-cancellation_8cpp.html  04-cancellation_8cpp__incl.map  04-cancellation_8cpp__incl.md5  04-left-hotplug_8cpp.html  04-left-hotplug_8cpp__incl.map  04-left-hotplug_8cpp__incl.md5  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.md  LICENSE_8md.html  README.md  README_8md.html  annotated.html  ci_setup.sh  classes.html  co__usb_8hpp.html  co__usb_8hpp__dep__incl.map  co__usb_8hpp__dep__incl.md5  co__usb_8hpp__incl.map  co__usb_8hpp__incl.md5  co__usb_8hpp_source.html  context_8cpp.html  context_8cpp__incl.map  context_8cpp__incl.md5  (+321 more)
.github/workflows/: doxygen.yml  tests.yml
cmake/: Config.cmake.in  CousbTests.cmake  Doxygen.cmake
docs/: Doxyfile.in
examples/: 00-simple-echo.cpp  01-multiple-transfers.cpp  02-hotplug.cpp  03-raw-hotplug.cpp  04-cancellation.cpp  04-left-hotplug.cpp  CMakeLists.txt  multiple.cpp
html/: classes.html  co__usb_8hpp__incl.md5  context_8cpp.html  context_8cpp__incl.map  context_8hpp.html  context_8hpp__dep__incl.map  context_8hpp__dep__incl.md5  context_8hpp__incl.md5  context_8hpp_source.html  device__acceptor_8hpp.html  device__acceptor_8hpp__dep__incl.md5  device__acceptor_8hpp_source.html  device__ref_8cpp.html  device__ref_8cpp__incl.md5  device__ref_8hpp__incl.map  device__ref_8hpp_source.html  device__triplet_8hpp__incl.md5  dir_000002_000005.html  dir_000006_000005.html  dir_000008_000005.html  dir_0cbd9bacdd1eb503d860eb5fdf5af625.html  dir_59d128fb766534d0ff9e97832ccaaa5c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8ecede72c810c5a496efbc93eb4ca918.html  dir_8ecede72c810c5a496efbc93eb4ca918_dep.map  dir_8ecede72c810c5a496efbc93eb4ca918_dep.md5  dir_aaec7577f4aca882f68626b05bc0227b.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_f3b87189b2c173d8cfba86539225805f_dep.map  endpoint_8cpp.html  endpoint_8hpp__dep__incl.md5  endpoint_8hpp__incl.md5  endpoint_8hpp_source.html  error_8hpp.html  error_8hpp__dep__incl.md5  error_8hpp__incl.md5  files.html  functions_type.html  graph_legend.html  (+73 more)
html/search/: all_0.js  all_2.js  all_4.js  all_6.js  all_a.js  all_d.js  all_e.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  enums_3.js  enumvalues_0.js  enumvalues_2.js  enumvalues_9.js  files_0.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  searchdata.js  typedefs_1.js  variables_0.js  variables_5.js
include/: co_usb.hpp
include/co_usb/: co_usb.hpp  context.hpp  device_handle.hpp  device_ref.hpp  device_triplet.hpp  error.hpp  executor.hpp  handler.hpp  hotplug.hpp  interface.hpp  kernel_driver_guard.hpp  raii.hpp  service.hpp  transfer.hpp  unique_context.hpp  unique_transfer.hpp
include/co_usb/detail/: left_state.hpp  service.hpp
include/co_usb/hotplug/: device_acceptor.hpp  device_left_signal.hpp  device_ref.hpp  hotplug.hpp  hotplug_awaitable.hpp  left_signal.hpp
include/co_usb/raii/: device_handle.hpp  unique_transfer.hpp
include/co_usb/tfer/: endpoint.hpp  error.hpp  transfer_awaitable.hpp  transfer_types.hpp
include/co_usb/transfer/: endpoint.hpp  error.hpp  transfer_awaitable.hpp  transfer_status.hpp  transfer_types.hpp
res/: toolchain.cmake
res/ports/boost-capy/: portfile.cmake  vcpkg.json
res/ports/libusb/: portfile.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_a.js  enumvalues_b.js  files_0.js  files_1.js  (+37 more)
src/: context.cpp  device_acceptor.cpp  device_left_signal.cpp  device_left_token.cpp  device_ref.cpp  endpoint.cpp  example.cpp  handler.cpp  hotplug_awaitable.cpp  interface.cpp  kernel_driver_guard.cpp  main.cpp  raii.cpp  service.cpp  transfer_awaitable.cpp
src/detail/: service.cpp
src/hotplug/: device_acceptor.cpp  hotplug_awaitable.cpp  left_signal.cpp
src/transfer/: endpoint.cpp  transfer_awaitable.cpp
tests/: 00-endpoint.cpp  01-transfers.cpp  CMakeLists.txt  test_mock.hpp
